--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
         }
         </style>
       <ul>
-        <li><a href="/index.html">Home</a></li>
+        <li><a href="/Web-Design-Challenge.html">Home</a></li>
         <li><a href="/Web-Design-Challenge/compare.html">Comparisons</a></li>
         <li><a href="/Web-Design-Challenge/data.html">Data</a></li>
         <li class="dropdown">
           <a href="javascript:void(0)" class="dropbtn">Visuals</a>
           <div class="dropdown-content">
-            <a href="Web-Design-Challenge/vis1.html">Link 1</a>
+            <a href="/Web-Design-Challenge/vis1.html">Link 1</a>
             <a href="/Web-Design-Challenge/vis2.html">Link 2</a>
             <a href="/Web-Design-Challenge/vis3.html">Link 3</a>
             <a href="/Web-Design-Challenge/vis4.html">Link 4</a>
