--- a/compare.html
+++ b/compare.html
@@ -59,7 +59,7 @@
         }
         </style>
       <ul>
-        <li><a href="/Web-Design-Challenge/">Home</a></li>
+        <li><a href="/Web-Design-Challenge/index.html">Home</a></li>
         <li><a href="/Web-Design-Challenge/compare.html">Comparisons</a></li>
         <li><a href="/Web-Design-Challenge/data.html">Data</a></li>
         <li class="dropdown">
