--- a/vis2.html
+++ b/vis2.html
@@ -59,16 +59,16 @@
         }
         </style>
       <ul>
-        <li><a href="http://127.0.0.1:5500/weather.html">Home</a></li>
-        <li><a href="http://127.0.0.1:5500/compare.html">Comparisons</a></li>
-        <li><a href="http://127.0.0.1:5500/data.html">Data</a></li>
+        <li><a href="/Web-Design-Challenge/index.html">Home</a></li>
+        <li><a href="/Web-Design-Challenge/compare.html">Comparisons</a></li>
+        <li><a href="/Web-Design-Challenge/data.html">Data</a></li>
         <li class="dropdown">
           <a href="javascript:void(0)" class="dropbtn">Visuals</a>
           <div class="dropdown-content">
-            <a href="http://127.0.0.1:5500/vis1.html">Link 1</a>
-            <a href="http://127.0.0.1:5500/vis2.html">Link 2</a>
-            <a href="http://127.0.0.1:5500/vis3.html">Link 3</a>
-            <a href="http://127.0.0.1:5500/vis4.html">Link 4</a>
+            <a href="/Web-Design-Challenge/vis1.html">Link 1</a>
+            <a href="/Web-Design-Challenge/vis2.html">Link 2</a>
+            <a href="/Web-Design-Challenge/vis3.html">Link 3</a>
+            <a href="/Web-Design-Challenge/vis4.html">Link 4</a>
           </div>
         </li>
       </ul>
