--- a/vis1.html
+++ b/vis1.html
@@ -75,7 +75,7 @@
 </head>
 <body>
     <h1>Latitude vs. Max Temputure</h1>
-    <img src="/Web-Design-Challenge/blob/master/WebVisualizations/Fig1.png" alt="LatvsTemp">
+    <img src="https://github.com/shades9a/Web-Design-Challenge/blob/master/WebVisualizations/Fig1.png?raw=true" alt="LatvsTemp">
     <h3>This chart shows the spread of Maximum temperature to the Latitude of the cities. What can bee seen is a curve that starts fairly high in temperature, then drops down when the Latitude becomes higher after a while. Latitude -20 to 20 seems to be the place that tends to remain the same temperature.</h3>
 
     
