--- a/vis2.html
+++ b/vis2.html
@@ -74,10 +74,10 @@
       </ul>
 </head>
 <body>
-    <h1>Latitude vs. Cloudiness</h1>
-    <img width="200" src="https://github.com/shades9a/Web-Design-Challenge/blob/main/WebVisualizations/Fig3.png" alt="LatvsCloud">
-    <h3>This graph shows the cloudiness over city Latitude. This doesn't give very accurate data as there are many flat lines . It does seem like there is a pattern where there are several lines at higher cloudiness, but there isn't anything telling me about cloudiness over latitude.</h3>
-
-    
+    <div>
+        <h1>Latitude vs. Cloudiness</h1>
+           <img src="https://github.com/shades9a/Web-Design-Challenge/blob/main/WebVisualizations/Fig3.png" alt="LatvsCloud">
+        <h3>This graph shows the cloudiness over city Latitude. This doesn't give very accurate data as there are many flat lines . It does seem like there is a pattern where there are several lines at higher cloudiness, but there isn't anything telling me about cloudiness over latitude.</h3>
+    </div>
 </body>
 </html>
