--- a/compare.html
+++ b/compare.html
@@ -74,11 +74,13 @@
       </ul>
 </head>
 <body>
-    <h1>Comparisons</h1>
-    <img width="200" src="https://utsa.bootcampcontent.com/utsa-bootcamp/utsa-san-data-pt-03-2021-u-c/-/raw/master/00_Homework_Assignments_Instructions_Data/09_Week11/Instructions/Resources/assets/images/Fig1.png" alt="LatvsTemp">
-    <img width="200" src="https://utsa.bootcampcontent.com/utsa-bootcamp/utsa-san-data-pt-03-2021-u-c/-/raw/master/00_Homework_Assignments_Instructions_Data/09_Week11/Instructions/Resources/assets/images/Fig3.png" alt="LatvsCloud">
-    <img width="200" src="https://utsa.bootcampcontent.com/utsa-bootcamp/utsa-san-data-pt-03-2021-u-c/-/raw/master/00_Homework_Assignments_Instructions_Data/09_Week11/Instructions/Resources/assets/images/Fig4.png" alt="LatvsWind">
-    <img width="200" src="https://utsa.bootcampcontent.com/utsa-bootcamp/utsa-san-data-pt-03-2021-u-c/-/raw/master/00_Homework_Assignments_Instructions_Data/09_Week11/Instructions/Resources/assets/images/Fig2.png" alt="LatvsHum">
+    <div>
+        <h1>Comparisons</h1>
+        <img src="https://github.com/shades9a/Web-Design-Challenge/blob/master/WebVisualizations/Fig1.png?raw=true" alt="LatvsTemp">
+        <img src="https://github.com/shades9a/Web-Design-Challenge/blob/master/WebVisualizations/Fig3.png?raw=true" alt="LatvsCloud">
+        <img src="https://github.com/shades9a/Web-Design-Challenge/blob/master/WebVisualizations/Fig4.png?raw=true" alt="LatvsWind">
+        <img src="https://github.com/shades9a/Web-Design-Challenge/blob/master/WebVisualizations/Fig2.png?raw=true" alt="LatvsHum">
+    </div>
     <div class="row">
         <div class="col-md-4">
         <h3>All available graphs for your viewing.</h3>
