--- a/vis3.html
+++ b/vis3.html
@@ -74,10 +74,12 @@
       </ul>
 </head>
 <body>
-    <h1>Latitude vs. Wind Speed</h1>
-    <img width="200" src="https://github.com/shades9a/Web-Design-Challenge/blob/main/WebVisualizations/Fig4.png" alt="LatvsWind">
-    <h3>This graph shows city latitue versus cloud speed. Wind speed is generaly low, especially in higher latitudes. That said, the highest latitudes also have the fastest winds, while the lowest latitudes also have fairly high wind speeds, though not as fast the the highest. </h3>
-
+    
+    <div>
+        <h1>Latitude vs. Wind Speed</h1>
+           <img src="https://github.com/shades9a/Web-Design-Challenge/blob/master/WebVisualizations/Fig4.png?raw=true" alt="LatvsWind">
+        <h3>This graph shows city latitue versus cloud speed. Wind speed is generaly low, especially in higher latitudes. That said, the highest latitudes also have the fastest winds, while the lowest latitudes also have fairly high wind speeds, though not as fast the the highest. </h3>
+    </div>
     
 </body>
 </html>
