--- a/vis4.html
+++ b/vis4.html
@@ -74,9 +74,10 @@
       </ul>
 </head>
 <body>
-    <h1>Latitude vs. Humidity</h1>
-    <img width="200" src="https://github.com/shades9a/Web-Design-Challenge/blob/main/WebVisualizations/Fig2.png" alt="LatvsHum">
-    <h3>This graph shows city latitue versus Humidity. Humidity is generalyhigh high while spreading thin in latitudes above and below the center.
-    
+    <div>
+        <h1>Latitude vs. Humidity</h1>
+           <img src="https://github.com/shades9a/Web-Design-Challenge/blob/master/WebVisualizations/Fig2.png?raw=true" alt="LatvsHumid">
+        <h3>This graph shows city latitue versus Humidity. Humidity is generalyhigh high while spreading thin in latitudes above and below the center.</h3>
+    </div>   
 </body>
 </html>
